# library-utils

./: CMakeLists.txt  LICENSE.txt  README.md
auditlibs/: CMakeLists.txt  README.md  auditlibs.c
cmake/: functions.cmake  lint_checks.cmake  snippets.cmake
findlib/: README.md
listlibs/: CMakeLists.txt  README.md  listlibs.c
listmylibs/: CMakeLists.txt  README.md  listmylibs.c
